--- a/css/header.css
+++ b/css/header.css
@@ -38,6 +38,8 @@
   background: transparent;
   padding-left: 1rem;
   color: var(--black2);
+  font-size: 0.875rem;
+  font-weight: 400;
 }
 
 .header-search-btn{
@@ -50,4 +52,27 @@
 .header-search-btn img{
   width: 24px;
   height: 24px;
+}
+
+@media(max-width: 800px){
+  .header{
+    padding: 1.375rem 2rem;
+  }
+
+  .header-logo{
+    width: 100px;
+    height: 28px;
+  }
+
+  .header-search-bg{
+    width: 272px;
+  }
+  
+  .header-search-input{
+    width: 212px;
+  }
+
+  .secondary-button{
+    width: 166px;
+  }
 }
