--- a/css/header.css
+++ b/css/header.css
@@ -57,11 +57,14 @@
 @media(max-width: 800px){
   .header{
     padding: 1.375rem 2rem;
+    flex-wrap: wrap;
+    gap: 1rem;
   }
 
   .header-logo{
     width: 180px;
     height: 28px;
+    margin-bottom: 1.5rem;
   }
 
   .header-search-bg{
