Criada seção de produtos, estilização e responsividade

--- a/css/hero.css
+++ b/css/hero.css
@@ -1,5 +1,5 @@
 .hero-bg{
-  width: 100vw;
+  width: 100%;
   height: 352px;
   background-image: url(../images/bg_hero.png);
   background-repeat: no-repeat;
