--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,5 @@
 @import url(../css/header.css);
 @import url(../css/hero.css);
 @import url(../css/products.css);
+
+@import url(../css/footer.css);
