--- a/css/products.css
+++ b/css/products.css
@@ -30,7 +30,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 1rem;
+  gap: 4rem 1rem;
+  flex-wrap: wrap;
 }
 
 .product{
