--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,6 @@
 @import url(../css/products.css);
 
 @import url(../css/login.css);
+@import url(../css/dashboard.css);
 
 @import url(../css/footer.css);
